--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,12 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
+  padding: 15px 0;
+}
+
+.header-divider {
+  width: 100%;
 }
 
 header nav {
@@ -107,11 +113,20 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
+  padding: 20px 0;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  width: 45%;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
 }
 
 footer .social-icons {
@@ -132,9 +147,17 @@ footer .copyright {
   align-items: center;
 }
 
+h1 .hero-area {
+  margin: 50px 0;
+}
+
 /* -------------------- Mobile Styles - Homepage -------------------- */
 
 /* Hero Area */
+
+.hero-area .content-wrapper {
+  width: 90%;
+}
 
 .hero-area {
   display: flex;
@@ -144,11 +167,29 @@ footer .copyright {
 
 /* Aside */
 
+aside .content-wrapper {
+  width: 90%;
+}
+
 aside {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+aside h3 {
+  padding: 20px 0 0 0;
+  margin: 0;
+}
+
+aside p {
+  padding: 15px 0;
+  margin: 0;
+}
+
+input {
+  margin: 15px 0 50px 0;
 }
 
 /* Features */
@@ -166,6 +207,15 @@ aside {
   flex-flow: row wrap;
 }
 
+h2 .features {
+  margin: 50px 0;
+}
+
+article {
+  width: 55%;
+  margin: 60px 0;
+}
+
 /* Reviews */
 
 .reviews {
@@ -174,15 +224,38 @@ aside {
   flex-flow: row wrap;
 }
 
+.reviews h2 {
+  margin: 50px 0 20px 0;
+}
+
+.reviews h3 {
+  width: 50%;
+  margin: 20px 0;
+}
+
+/* Contact & Social */
+
+.contact, .social h4 {
+  margin: 50px 0 20px 0;
+}
+
 /* ==========================================================================
    About Page
    ========================================================================== */
+
+.mission .content-wrapper {
+  width: 90%;
+}
 
 .mission {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.contact-section .content-wrapper {
+  width: 90%;
 }
 
 .contact-section {
@@ -208,9 +281,10 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  width: 90%;
 }
 
-.faq .row-1, .row-2 {
+.faq .row-1 .row-2 {
   display: flex;
   justify-content: center;
   align-items: center;
