Updated font styles and background color

--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,71 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   /* General Styles */
+
+html {
+   	font-size: 16px;
+   }
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    color: #e2e3ed;
+    background-color: #202322;
+    font-weight: 400;
+   }
+
+ul,
+ol {
+  list-style-type: none;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
+   }
+
+a {
+   color: #e2e3ed;
+   text-decoration: none;
+   }
+
+h1 {
+     font-family: 'Poppins', sans-serif;
+     font-size: 2.25em;
+     font-weight: 500;
+     line-height: 1.5em;
+   }
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.875em;
+    font-weight: 500;
+   }
+
+h3,
+h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.125em;
+    font-weight: 500;
+   }
+
+p {
+  font-size: 0.875em;
+  line-height: 1.5em;
+
+   }
+
+img {
+
+   }
+
+figure {
+
+   }
+
+address {
+  font-style: normal;
+   }
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -128,13 +193,13 @@ header .content-wrapper {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background-color: #3a3a3a
 }
 
 header nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
-  flex-flow: row wrap;
   width: 60%;
 }
 
