--- a/css/main.css
+++ b/css/main.css
@@ -224,24 +224,36 @@ footer .content-wrapper {
 
 footer .contact {
   margin-bottom: 50px;
+  text-align: center;
 }
 
 footer .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  text-align: center;
 }
 
 footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 footer .copyright {
   margin: 20px 0;
 }
 
+footer .social {
+  text-align: center;
+}
+
+footer .copyright {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
 /* -------------------- Mobile Styles - Homepage -------------------- */
 
 /* Hero Area */
@@ -283,6 +295,10 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.features-item-description, .fontawesome-icon {
+  text-align: center;
 }
 
 .features p {
@@ -353,6 +369,36 @@ aside {
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+/* ==========================================================================
+   Form code
+   ========================================================================== */
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #9d9ea4;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* ==========================================================================
@@ -465,7 +511,7 @@ aside {
     }
 
     header nav {
-      width: 20%;
+      width: 30%;
     }
 
     header nav ul {
@@ -508,6 +554,7 @@ aside {
     .reviews article {
       display: flex;
       justify-content: space-between;
+      width: 460px;
     }
 
     .reviews article div {
@@ -581,6 +628,10 @@ aside {
            max-width: 960px;
       }
 
+      header nav {
+        width: 20%;
+      }
+
        /* Hero */
       .hero-area h1 {
           width: 100%;
@@ -588,12 +639,12 @@ aside {
 
       /* Aside */
       aside .content-wrapper {
-          justify-content: center;
+          justify-content: space-between;
       }
 
       aside .content-wrapper .form-description,
       aside .content-wrapper .form {
-          width: 100%;
+          width: 320px;
       }
 
       /* Features */
@@ -602,7 +653,7 @@ aside {
       }
 
       .features article {
-          flex-basis: ;
+          flex-basis: 300px;
       }
 
       /* Reviews */
