--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ h1 {
      font-family: 'Poppins', sans-serif;
      font-size: 2.25em;
      font-weight: 500;
-     line-height: 1.5em;
+     line-height: 1.125em;
    }
 
 h2 {
@@ -150,21 +150,21 @@ p {
 
    }
 
-img {
-
-   }
-
-figure {
-
-   }
-
 address {
   font-style: normal;
    }
 
 .content-wrapper {
   width: 90%;
-  margin: 50px 0;
+  margin: 30px 0;
+}
+
+img {
+	width: 100%;
+}
+
+figure {
+  margin: 0;
 }
 
 /* -------------------- Base Header - Footer Styles -------------------- */
@@ -189,18 +189,29 @@ header .content-wrapper {
   margin: 0;
 }
 
+header figure {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+}
+
 .header-divider {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
-  background-color: #3a3a3a
+  background: #3a3a3a
 }
 
 header nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
 }
 
 header nav ul {
@@ -262,7 +273,21 @@ footer .copyright {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-image: url('../img/jake-melara-30679-unsplash.jpg');
+  background-position: 50% 35%;
+  background-repeat: no-repeat;
+  background-size: 350%;
+  max-width: 100%;
+  min-height: 500px;
 }
+
+.hero-area h1 {
+  width: 90%;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
+}
+
 
 /* Aside */
 
@@ -271,6 +296,33 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #9d9ea4;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* Features */
@@ -279,6 +331,10 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-image: url('../img/rawpixel-800820-unsplash.jpg');
+  background-size: 500%;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .features h2 {
@@ -311,6 +367,12 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
+}
+
+.reviews figure {
+  width: 100%;
+  height: auto;
 }
 
 .reviews h2 {
@@ -331,6 +393,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .contact-section {
@@ -338,6 +401,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 
 .contact-content p {
@@ -353,6 +417,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 .faq .content-wrapper {
@@ -369,36 +434,6 @@ aside {
 
 .faq-content {
   margin-bottom: 50px;
-}
-
-/* ==========================================================================
-   Form code
-   ========================================================================== */
-
-aside .form {
-  margin-top: 30px;
-}
-
-input[type=text] {
-  box-sizing: border-box;
-  width: 100%;
-  color: #2a423a;
-  font-style: italic;
-  padding: 1em;
-}
-
-input[type=button] {
-  width: 100%;
-  padding: 20px 0;
-  margin-top: 20px;
-  background-color: #2a423a;
-  font-family: 'Poppins', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 1.125em;
-  color: #9d9ea4;
-  border: none;
-  text-align: center;
-  text-transform: uppercase;
 }
 
 /* ==========================================================================
@@ -496,7 +531,7 @@ input[type=button] {
     /* General styles */
     .content-wrapper {
       max-width: 640px;
-      margin: 100px 0;
+      margin: 40px 0;
     }
 
     /* Header */
@@ -521,9 +556,25 @@ input[type=button] {
     .header-divider {
       display: none;
     }
+
+    header figure {
+        width: 40%;
+    }
+
     /* Hero Area */
+    .hero-area {
+      background-position: 50% 50%;
+      background-size: 150%;
+      height: 600px;
+    }
+
+    .hero-area h1 {
+      font-size: 3em;
+      line-height: 1.125em;
+    }
 
     /* Aside */
+
     aside .content-wrapper {
       margin: 50px 0;
       display: flex;
@@ -538,6 +589,10 @@ input[type=button] {
     }
 
     /* Features */
+    .features {
+      background-size: 200%;
+    }
+
     .features article {
       display: flex;
       justify-content: center;
@@ -551,15 +606,24 @@ input[type=button] {
     }
 
     /* Reviews */
+
     .reviews article {
       display: flex;
       justify-content: space-between;
-      width: 460px;
+      align-items: flex-start;
+      width: 100%;
     }
 
-    .reviews article div {
-      width: 49%;
+    .reviews figure {
+      width: 50%;
+      height: auto;
     }
+
+    .reviews h3 {
+      margin: 0 0 20px 0;
+    }
+
+
 
     /* Footer */
     footer .content-wrapper {
@@ -592,9 +656,15 @@ input[type=button] {
       padding-top: 20px
     }
 
+    .mission-content h2, .contact-section h2 {
+      font-size: 2.25em;
+    }
+
     .mission-content p {
       width: 45%;
     }
+
+
 
     .contact-section .content-wrapper h2 {
       width: 80%;
@@ -628,18 +698,39 @@ input[type=button] {
            max-width: 960px;
       }
 
+      header figure {
+          width: 40%;
+        }
+
       header nav {
         width: 20%;
       }
 
        /* Hero */
+
       .hero-area h1 {
-          width: 100%;
+          width: 70%;
+          font-size: 3.75em;
+          line-height: 1em;
+      }
+
+      .hero-area {
+        background-position: 50% 50%;
+        background-size: 100%;
+        height: 600px;
       }
 
       /* Aside */
       aside .content-wrapper {
           justify-content: space-between;
+      }
+
+      aside h3 {
+        font-size: 1.875em;
+      }
+
+      aside p {
+        font-size: 1.125em;
       }
 
       aside .content-wrapper .form-description,
@@ -648,8 +739,10 @@ input[type=button] {
       }
 
       /* Features */
+
       .features h2 {
-          width: 100%
+          width: 100%;
+          font-size: 2.25em;
       }
 
       .features article {
@@ -657,8 +750,19 @@ input[type=button] {
       }
 
       /* Reviews */
-      .reviews article div {
-          width: 100%;
+
+      .reviews h2 {
+        font-size: 2.25em;
+      }
+
+      .reveiws h3 {
+        font-size: 1.875em;
+        width: 10%;
+      }
+
+      .reviews figure {
+        width: 100%;
+        height: auto;
       }
 
   /* ==========================================================================
@@ -666,7 +770,11 @@ input[type=button] {
      ========================================================================== */
       .mission h2,
       .contact-section .content-wrapper h2 {
-          width:
+          width:200%
+      }
+
+      .contact-section h2, .mission-section h2 {
+        font-size: 3em;
       }
 
   /* ==========================================================================
