--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ body {
 ul,
 ol {
   list-style-type: none;
-  font-size: 1.125em;
+  font-size: 1.25em;
   font-weight: 700;
   text-transform: uppercase;
    }
@@ -164,7 +164,7 @@ img {
 }
 
 figure {
-  margin: 0;
+  margin: 0px;
 }
 
 /* -------------------- Base Header - Footer Styles -------------------- */
@@ -178,7 +178,7 @@ footer {
 }
 
 header {
-  padding: 15px 0;
+  padding: 10px 0;
 }
 
 header .content-wrapper {
@@ -195,6 +195,7 @@ header figure {
     justify-content: center;
     align-items: center;
     flex-flow: row wrap;
+    margin: 20px 0;
 }
 
 .header-divider {
@@ -206,12 +207,10 @@ header figure {
 
 header nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
-  font-size: 1.125em;
-  font-weight: 700;
 }
 
 header nav ul {
@@ -306,7 +305,7 @@ aside .form {
 input[type=text] {
   box-sizing: border-box;
   width: 100%;
-  color: #2a423a;
+  color: #9d9ea4;
   font-style: italic;
   padding: 1em;
 }
@@ -319,7 +318,7 @@ input[type=button] {
   font-family: 'Poppins', Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 1.125em;
-  color: #9d9ea4;
+  color: #e2e3ed;
   border: none;
   text-align: center;
   text-transform: uppercase;
@@ -534,6 +533,14 @@ input[type=button] {
       margin: 40px 0;
     }
 
+    h1 {
+      font-size: 2.25em;
+    }
+
+    h2 {
+      font-size: 1.5em;
+    }
+
     /* Header */
     header {
       justify-content: space-around;
@@ -614,13 +621,29 @@ input[type=button] {
       width: 100%;
     }
 
+    .reviews-text {
+      width: 45%;
+    }
+
     .reviews figure {
       width: 50%;
       height: auto;
     }
 
+    .reviews h2 {
+      font-size: 2.25em;
+      width: 80%;
+    }
+
     .reviews h3 {
       margin: 0 0 20px 0;
+      font-size: 1.5em;
+      width: 100%;
+    }
+
+    .reviews p {
+      font-size: 0.875em;
+      line-height: 1.375em;
     }
 
 
@@ -639,6 +662,10 @@ input[type=button] {
 
     footer .contact {
       margin-bottom: 0;
+    }
+
+    footer h4 {
+      font-size: 1.5em;
     }
 
     footer .copyright {
@@ -699,7 +726,7 @@ input[type=button] {
       }
 
       header figure {
-          width: 40%;
+          width: 30%;
         }
 
       header nav {
@@ -738,6 +765,10 @@ input[type=button] {
           width: 320px;
       }
 
+      input[type=button] {
+        font-size: 1.5em;
+      }
+
       /* Features */
 
       .features h2 {
@@ -751,18 +782,38 @@ input[type=button] {
 
       /* Reviews */
 
+      .reviews article {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        width: 100%;
+      }
+
+      .reviews-text {
+        width: 45%;
+      }
+
+      .reviews figure {
+        width: 50%;
+        height: auto;
+      }
+
       .reviews h2 {
         font-size: 2.25em;
       }
 
-      .reveiws h3 {
+      .reviews h3 {
         font-size: 1.875em;
-        width: 10%;
+        width: 80%;
       }
 
-      .reviews figure {
-        width: 100%;
-        height: auto;
+      .reviews p {
+        font-size: 1.125em;
+        line-height: 1.5em;
+      }
+
+      .footer h4 {
+        font-size: 1.875em;
       }
 
   /* ==========================================================================
