--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,8 @@ body {
 ul,
 ol {
   list-style-type: none;
+  margin: 10px 0 25px 0;
+  padding: 0;
   font-size: 1.25em;
   font-weight: 700;
   text-transform: uppercase;
@@ -210,7 +212,7 @@ header nav {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
+  width: 75%;
 }
 
 header nav ul {
